<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"
            android:visible="true" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_fixture"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_fixture" />
        <item
            android:id="@+id/nav_misTorneos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_misTorneos" />
    </group>

    <item android:title="Configuración">
        <menu>
            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_logOut" />
        </menu>
    </item>
</menu>