<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.frontmain.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.frontmain.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_fixture"
        android:name="com.example.frontmain.ui.fixture.fixture"
        android:label="@string/menu_fixture"
        tools:layout="@layout/fragment_fixture" />

    <fragment
        android:id="@+id/nav_misTorneos"
        android:name="com.example.frontmain.ui.misTorneos.misTorneos"
        android:label="@string/menu_misTorneos"
        tools:layout="@layout/fragment_mis_torneos" />

    <fragment
        android:id="@+id/nav_logOut"
        android:name="com.example.frontmain.ui.logOut.logOut"
        android:label="@string/menu_logOut"
        tools:layout="@layout/fragment_log_out" />
</navigation>